--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "webpack-dev-server --open",
     "test": "jest --verbose --watchAll"
   },
+  "jest": {
+    "runner": "jest-runner-eslint",
+    "displayName": "lint",
+    "testMatch": ["<rootDir>/src/**/*.js"]
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {},
@@ -15,6 +20,7 @@
     "@babel/preset-env": "^7.12.1",
     "eslint": "^7.12.1",
     "jest": "^26.6.1",
+    "jest-runner-eslint": "^0.10.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.5.0"
