--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "jest --verbose --watchAll"
-  },
-  "jest": {
-    "runner": "jest-runner-eslint",
-    "displayName": "lint",
-    "testMatch": ["<rootDir>/src/**/*.js"]
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +13,11 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@testing-library/dom": "^7.26.3",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/user-event": "^12.1.10",
     "eslint": "^7.12.1",
+    "eslint-plugin-jest-dom": "^3.2.4",
     "jest": "^26.6.1",
     "jest-runner-eslint": "^0.10.0",
     "webpack": "^4.32.2",
